TEST_PROGRAMS/VALID_TYPECHECK/slices_indexing2.go
package main;

func main (){

    var x int = 5;
    var s [] int;
    s = append(s,x)

    //expressions are allowed inside slice access
    print(s[1-1])

}
