TEST_PROGRAMS/INVALID/04/50.go
package main

func main() {
    var x = 2

    //Illegal slice
    x = x[::]
}
